--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ gradle/*
 *.xml
 *.bin
 *.lock
+.gradle/5.2.1/executionHistory/executionHistory.bin
+.gradle/5.2.1/executionHistory/executionHistory.lock
+.gradle/5.2.1/fileContent/fileContent.lock
+.gradle/5.2.1/fileHashes/fileHashes.bin
+.gradle/5.2.1/fileHashes/fileHashes.lock
+.gradle/5.2.1/javaCompile/classAnalysis.bin
+.gradle/5.2.1/javaCompile/javaCompile.lock
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
