--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
